--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,29 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/news_card_view"
+    android:id="@+id/news_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    card_view:cardUseCompatPadding="true"
-    style="?attr/cardStyle">
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        android:layout_width="match_parent">
+    android:orientation="horizontal"
+    android:padding="16dp">
+
         <ImageView
-            android:layout_height="75dp"
-            android:layout_width="75dp"
+            android:layout_height="72dp"
+            android:layout_width="72dp"
             android:layout_gravity="center"
             android:id="@+id/news_image" />
         <LinearLayout
             android:layout_width="fill_parent"
             android:orientation="vertical"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingLeft="8dp"
+            android:paddingLeft="16dp"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/news_title"
@@ -43,5 +35,4 @@
                 android:textColor="?android:textColorSecondary"
                 android:textAlignment="gravity" />
         </LinearLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+</LinearLayout>
