fixed theming   color of popupmenu   color of cct   size of list items   scrollbar hides   items clickable   fixed spacing issue in launch list

--- a/app/src/main/res/layout/fragment_launchlist.xml
+++ b/app/src/main/res/layout/fragment_launchlist.xml
@@ -8,9 +8,9 @@
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/list"
 
-		android:fadeScrollbars="false"
+		android:fadeScrollbars="true"
 		android:scrollbarStyle="outsideOverlay"
-		android:padding="8dp"
+		android:paddingTop="8dp"
 		android:clipToPadding="false"
 		android:layout_width="match_parent"
 		android:scrollbars="vertical"
