--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -7,9 +7,9 @@
     android:id="@+id/swipe_layout_news">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_news"
-        android:fadeScrollbars="false"
+        android:fadeScrollbars="true"
         android:scrollbarStyle="outsideOverlay"
-        android:padding="8dp"
+        android:paddingTop="8dp"
         android:clipToPadding="false"
         android:layout_width="match_parent"
         android:scrollbars="vertical"
