--- a/app/src/main/res/layout/launch_list_item.xml
+++ b/app/src/main/res/layout/launch_list_item.xml
@@ -2,6 +2,9 @@
 
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:clickable="true"
+	android:focusable="true"
+	android:background="?android:attr/selectableItemBackground"
 	android:id="@+id/launch_item_layout"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
