redid detailed view completely cct toolbar always black switched open map>settings in detailed activity fixed oa-5 missing date some styles changes
removed version in settings
redid about to mimic settings style
added license dialogs for lclock and glide
added license files to assets

--- a/app/src/main/res/menu/menu_detailed.xml
+++ b/app/src/main/res/menu/menu_detailed.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/open_map" android:title="Open location in map"
+    <item android:id="@+id/detailed_settings" android:title="Settings"
         app:showAsAction="never" />
 </menu>
