--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -13,27 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:id="@+id/dcard_header">
 
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/dcard_title"
-                    android:textSize="24sp"
-                    android:textColor="?android:textColorPrimary" />
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:id="@+id/dcard_subtitle"
-                    android:layout_height="fill_parent"
-                    android:textSize="14sp"
-                    android:textColor="?android:textColorSecondary"
-                    />
-            </LinearLayout>
             <ImageView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -42,72 +22,93 @@
                 android:id="@+id/dcard_img" />
             <LinearLayout
                 android:layout_width="match_parent"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="16dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/dcard_subtitle"
+                    android:layout_height="fill_parent"
+                    android:textSize="20sp"
+                    android:textColor="?android:textColorPrimary" />
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:id="@+id/dcard_countdown"
+                    android:textSize="20sp"
+                    android:textColor="?android:textColorPrimary"/>
+            </LinearLayout>
+            <TextView
+                android:layout_width="fill_parent"
+                android:padding="16dp"
+                android:textSize="14sp"
+                android:lineSpacingMultiplier="1.25"
+                android:textColor="?android:textColorPrimary"
+                android:id="@+id/dcard_details"
+                android:layout_height="wrap_content" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:background="?android:attr/listDivider"/>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="16dp"
                 android:paddingTop="8dp"
+                android:layout_marginTop="8dp"
+                android:paddingBottom="8dp"
+                android:id="@+id/dcard_time_item"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?android:attr/selectableItemBackground"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:tint="?colorAccent"
+                    android:layout_gravity="center_vertical"
                     android:src="?attr/timeimg"
-                    android:paddingRight="4dp"/>
+                    android:paddingRight="32dp"/>
+
                 <TextView
                     android:layout_width="fill_parent"
                     android:gravity="center_vertical"
                     android:textSize="14sp"
-                    android:textColor="?android:textColorSecondary"
+                    android:textColor="?android:textColorPrimary"
                     android:id="@+id/dcard_time"
                     android:layout_height="match_parent" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 android:paddingLeft="16dp"
-                android:paddingTop="4dp"
+                android:id="@+id/dcard_loc_item"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?android:attr/selectableItemBackground"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:src="?attr/locimg"
+                    android:tint="?colorAccent"
+                    android:layout_gravity="center_vertical"
                     android:layout_height="wrap_content"
-                    android:paddingRight="4dp"/>
+                    android:paddingRight="32dp"/>
                 <TextView
                     android:layout_width="fill_parent"
                     android:gravity="center_vertical"
                     android:textSize="14sp"
-                    android:textColor="?android:textColorSecondary"
+                    android:textColor="?android:textColorPrimary"
                     android:id="@+id/dcard_location"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
-            <TextView
-                android:layout_width="fill_parent"
-                android:padding="16dp"
-                android:textSize="14sp"
-                android:textColor="?android:textColorSecondary"
-                android:id="@+id/dcard_details"
-                android:layout_height="wrap_content" />
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:paddingLeft="16dp"
-                android:paddingRight="8dp"
-                android:paddingBottom="8dp"
-                android:layout_height="wrap_content">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/dcard_reminderButt"
-                    android:text="Set Reminder"
-                    android:textSize="16sp"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:textColor="@color/accent_material_light" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/dcard_countdown"
-                    android:textSize="20sp"
-                    android:textColor="?android:textColorPrimary"/>
-            </RelativeLayout>
+
+
         </LinearLayout>
 </ScrollView>
