--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="cardview_dark_background">#FF212121</color>
-    <color name="textColorSecondary">?android:textColorSecondary</color>
-    <color name="textColorPrimary">?android:textColorPrimary</color>
+    <color name="accent">?attr/colorAccent</color>
 </resources>
