reordered/rewrote some settings added option to disable analytics collection (TESTING) added privacy policy hosted on github

--- a/app/src/main/res/xml/activity_about.xml
+++ b/app/src/main/res/xml/activity_about.xml
@@ -7,6 +7,9 @@
         android:key="about_version"
         android:title="" />
     <Preference
+        android:key="about_privacyPolicy"
+        android:title="Privacy Policy" />
+    <Preference
         android:key="about_email"
         android:title="Email the developer" />
     </PreferenceCategory>
