--- a/app/src/main/res/menu/menu_news_fragment.xml
+++ b/app/src/main/res/menu/menu_news_fragment.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
+    <item android:id="@+id/open_sn" android:title="View in browser"/>
     <item android:id="@+id/action_settings" android:title="Settings"
         app:showAsAction="never" />
-    <item android:id="@+id/open_sfn" android:title="View in browser"/>
 </menu>
