--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 	<PreferenceCategory android:title="Settings">
+		<MultiSelectListPreference
+			android:key="pref_searchParams"
+			android:title="Search Parameters"
+			android:dialogTitle="Include the following in search"
+			android:entries="@array/pref_searchNames"
+			android:defaultValue="@array/pref_searchDefaults"
+			android:entryValues="@array/pref_searchNames" />
 		<CheckBoxPreference
 			android:key="pref_darkTheme"
 			android:title="Dark Theme"
