--- a/app/src/main/res/menu/menu_launch_fragment.xml
+++ b/app/src/main/res/menu/menu_launch_fragment.xml
@@ -5,8 +5,7 @@
     <item android:id="@+id/action_search"
         android:title="Search"
         android:icon="@mipmap/ic_search_white_24dp"
-        app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+        app:showAsAction="always" />
     <item android:id="@+id/open_sfn" android:title="View in browser"/>
     <item android:id="@+id/action_settings" android:title="Settings"
         app:showAsAction="never" />
