--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="accent">?attr/colorAccent</color>
+    <color name="primary">?attr/colorPrimary</color>
 </resources>
