--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,16 +23,18 @@
                 android:id="@+id/search_view"
                 android:layout_width="match_parent"
                 style="@style/MaterialSearchViewStyle"
+
                 android:layout_height="wrap_content" />
         </FrameLayout>
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
             android:id="@+id/tablayout"
+            android:animateLayoutChanges="true"
             android:layout_height="wrap_content" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
+    <util.CustomViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
