--- a/app/src/main/res/layout/launch_list_item.xml
+++ b/app/src/main/res/layout/launch_list_item.xml
@@ -20,7 +20,7 @@
 			android:layout_weight="1"
 			android:gravity="left"
 			android:ellipsize="end"
-			android:singleLine="true"
+			android:maxLines="2"
 			android:paddingRight="8dp"
 			android:layout_width="0dp"
 			android:layout_height="match_parent"
